refactor data.sql for prod